--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
     compile project(':opencvSDK')
 }
